# AgenticWorkflows

./: .gitignore  README.md  pyproject.toml
.github/workflows/: badges.yml  ci.yml
ci/: calculate_complexity.sh  calculate_coverage.sh  calculate_maintainability.sh  run_formatter.sh  run_linter.sh  update_badges.sh
examples/: 00_local_llms.ipynb  01_hello_world.ipynb  02_cyclic_graph.ipynb  03_agentic_graph.ipynb  04_agents_and_tools.ipynb
scripts/: 01_basic_question.py  01_basic_single_question.py  02_chain.py  03_post_analysis.py  04_graph_agent.py  05_web_search_tool.py  06_copilot.py  run.py
tests/: test_library_import.py
