[tool.poetry]
name = "agenticworkflows"
version = "0.0.0"
description = "A small example package of LLM powered agentic workflows"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
