[tool.poetry]
name = "agentic-workflows"
version = "0.0.0"
description = "A small example package of LLM powered agentic workflows"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langgraph = "^0.2.14"
rich = "^13.8.0"
langchain-ollama = "^0.1.2"
langchain-community = "^0.2.14"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
radon = "^6.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
